# CPlus_Projects

multithreaded_mandlebrot_fractals/: CMakeLists.txt
multithreaded_mandlebrot_fractals/include/: image.h
multithreaded_mandlebrot_fractals/src/: parallel_mandelbrot.cpp  serial_mandelbrot.cpp
